# opencodex

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  WORKFLOW.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md
docs/changelog/: 2026-02-23-1909.md
src/: app.rs  auth.rs  codex.rs  i18n.rs  main.rs  session.rs  telegram.rs
src/telegram/: bot.rs  commands.rs  file_ops.rs  message.rs  mod.rs  storage.rs  streaming.rs  tools.rs
